Fixed alignment of columns, moved results to display above main game display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-image:  url(../images/stars.jpg);
     color: white;
+    text-align: center;
 }
 
 .header-row{
